--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,28 +9,26 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <title>Portfolio</title>
-</head>
-<body>
-  <header id="hdr">
-    <nav id="nav">
+  </head>
+  <body>
+    <header id="hdr">
+      <nav id="nav">
       <div id="mylogo">
         <a href="#header"><img src="img/MyLogo.png" alt="Logo"></a>
       </div>
       <div id="btn-menu"><img src="img/Normal-Button/Tertiary/Icons/Icon-Menu.png" alt=""></div>
-    </nav>
-    <section id="headline">
-      <div class="headline-txt">
-          <h1 class="txt-1 order-0">I’m Danys
-              Glad to see you!
-          </h1>
-          <p class="txt-2 order-1">I’m a software developer! I can help you build
+      </nav>
+      <section id="headline">
+        <div class="headline-txt">
+          <h1 class="txt-1 order-0 pd-0 mrg-0">I’m DanyGlad to see you!</h1>
+          <p class="txt-2 order-1 pd-0 mrg-0 txt-j">I’m a software developer! I can help you build
              a product , feature or website Look through
              some of my work and experience! If you
              like what you see and have a project you need
              coded, don’t hestiate to contact me.
           </p>
           <div class="txt-3 order-2">LET’S CONNECT</div>
-          <ul class="scl-icons order-3">
+          <ul class="scl-icons order-3 mrg-0 pd-0">
               <li><a href="#"><img src="img/twitter.svg" alt="twitter"></a></li>
               <li><a href="#"><img src="img/Linkedinicon.svg" alt="linkedin"></a></li>
               <li><a href="#"><img src="img/medium.svg" alt="medium"></a></li>
@@ -39,6 +37,6 @@
           </ul>
         </div>
       </section>
-  </header>
-</body>
+    </header>
+  </body>
 </html>
