--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </nav>
       <section id="headline">
         <div class="headline-txt">
-          <h1 class="txt-1 order-0 pd-0 mrg-0">I’m DanyGlad to see you!</h1>
+          <h1 class="txt-1 order-0 pd-0 mrg-0">I’m Danys Glad to see you!</h1>
           <p class="txt-2 order-1 pd-0 mrg-0 txt-j">I’m a software developer! I can help you build
              a product , feature or website Look through
              some of my work and experience! If you
