--- a/index.html
+++ b/index.html
@@ -38,5 +38,25 @@
         </div>
       </section>
     </header>
+    <section class="works">
+    <div class="card order-0">
+      <div class="block-img order-0"><img src="img/mobile-cards-img/Snapshoot-Portfolio-card-1.png" alt="project 1 image"></div>
+      <div class="block-txt order-1 pd-0 mrg-0">
+          <div class="primary-txt">
+            <h2 class="pd-0 mrg-0 txt-4">Tonic</h2>
+            <ul class="list-stl pd-0 flx-rw mrg-0">
+              <li class="txt-5">CANOPY</li>
+              <li><img src="img/Counter.png" alt="Separator image"></li>
+              <li class="txt-6">Back End Dev</li>
+              <li><img src="img/Counter.png" alt="Separator image"></li>
+              <li class="txt-6">2015</li>
+            </ul>
+          </div>
+      </div>
+    </div>
+    <div class="card">2</div>
+    <div class="card">3</div>
+    <div class="card">4</div>
+  </section>
   </body>
 </html>
