--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
       </section>
     </header>
     <section class="works">
-    <div class="card order-0">
-      <div class="block-img order-0"><img src="img/mobile-cards-img/Snapshoot-Portfolio-card-1.png" alt="project 1 image"></div>
-      <div class="block-txt order-1 pd-0 mrg-0">
-          <div class="primary-txt">
+      <div class="card order-0 pd-0 mrg-0">
+        <div class="block-img order-0"><img src="img/mobile-cards-img/Snapshoot-Portfolio-card-1.png" alt="project 1 image"></div>
+        <div class="block-txt order-1 pd-0 mrg-0">
+          <div class="primary-txt order-0">
             <h2 class="pd-0 mrg-0 txt-4">Tonic</h2>
             <ul class="list-stl pd-0 flx-rw mrg-0">
               <li class="txt-5">CANOPY</li>
@@ -52,11 +52,88 @@
               <li class="txt-6">2015</li>
             </ul>
           </div>
+          <p class="mrg-0 txt-7 order-1">A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
+          <ul class="tags order-2 list-stl flx-rw mrg-0 pd-0">
+            <li class="txt-tags">html</li>
+            <li class="txt-tags">css</li>
+            <li class="txt-tags">javaScript</li>
+          </ul>
+          <div class="action order-3">
+            <button type="submit" class="mobile-btn mobile-btn-txt">See Project</button>
+          </div>
+        </div>
+      </div> 
+      <div class="card order-1">
+        <div class="block-img order-0"><img src="img/mobile-cards-img/Snapshoot-Portfolio-card-2.png" alt="project 1 image"></div>
+        <div class="block-txt order-1 pd-0 mrg-0">          
+          <div class="primary-txt order-0">
+          <h2 class="pd-0 mrg-0 txt-4">Multi-Post<br>Stories</h2>
+          <ul class="list-stl pd-0 flx-rw mrg-0">
+            <li class="txt-5">CANOPY</li>
+            <li><img src="img/Counter.png" alt="Separator image"></li>
+            <li class="txt-6">Back End Dev</li>
+            <li><img src="img/Counter.png" alt="Separator image"></li>
+            <li class="txt-6">2015</li>
+          </ul>
+          </div>
+          <p class="mrg-0 txt-7 order-1">A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
+          <ul class="tags order-2 list-stl flx-rw mrg-0 pd-0">
+            <li class="txt-tags">html</li>
+            <li class="txt-tags">css</li>
+            <li class="txt-tags">javaScript</li>
+          </ul>
+          <div class="action order-3">
+            <button type="submit" class="mobile-btn mobile-btn-txt">See Project</button>
+          </div>
+        </div>
+      </div> 
+      <div class="card order-2">
+        <div class="block-img order-0"><img src="img/mobile-cards-img/Snapshoot-Portfolio-card-3.png" alt="project 1 image"></div>
+          <div class="block-txt order-1 pd-0 mrg-0">
+            <div class="primary-txt order-0">
+              <h2 class="pd-0 mrg-0 txt-4">Tonic</h2>
+              <ul class="list-stl pd-0 flx-rw mrg-0">
+                <li class="txt-5">CANOPY</li>
+                <li><img src="img/Counter.png" alt="Separator image"></li>
+                <li class="txt-6">Back End Dev</li>
+                <li><img src="img/Counter.png" alt="Separator image"></li>
+                <li class="txt-6">2015</li>
+              </ul>
+            </div>
+            <p class="mrg-0 txt-7 order-1">A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
+            <ul class="tags order-2 list-stl flx-rw mrg-0 pd-0">
+              <li class="txt-tags">html</li>
+              <li class="txt-tags">css</li>
+              <li class="txt-tags">javaScript</li>
+            </ul>
+            <div class="action order-3">
+              <button type="submit" class="mobile-btn mobile-btn-txt">See Project</button>
+            </div>
+          </div>    
       </div>
-    </div>
-    <div class="card">2</div>
-    <div class="card">3</div>
-    <div class="card">4</div>
-  </section>
+      <div class="card order-3">
+        <div class="block-img order-0"><img src="img/mobile-cards-img/Snapshoot-Portfolio-card-4.png" alt="project 1 image"></div>
+        <div class="block-txt order-1 pd-0 mrg-0">
+          <div class="primary-txt order-0">
+            <h2 class="pd-0 mrg-0 txt-4">Multi-Post<br>Stories</h2>
+            <ul class="list-stl pd-0 flx-rw mrg-0">
+              <li class="txt-5">CANOPY</li>
+              <li><img src="img/Counter.png" alt="Separator image"></li>
+              <li class="txt-6">Back End Dev</li>
+              <li><img src="img/Counter.png" alt="Separator image"></li>
+              <li class="txt-6">2015</li>
+            </ul>
+          </div>
+          <p class="mrg-0 txt-7 order-1">A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
+          <ul class="tags order-2 list-stl flx-rw mrg-0 pd-0">
+            <li class="txt-tags">html</li>
+            <li class="txt-tags">css</li>
+            <li class="txt-tags">javaScript</li>
+          </ul>
+          <div class="action order-3">
+            <button type="submit" class="mobile-btn mobile-btn-txt">See Project</button>
+          </div>
+        </div>     
+    </section>
   </body>
 </html>
