--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
     <title>Portfolio</title>
   </head>
   <body>
-    <header id="hdr">
-      <nav id="nav">
-      <div id="mylogo">
-        <a href="#header"><img src="img/MyLogo.png" alt="Logo"></a>
-      </div>
-      <div id="btn-menu"><img src="img/Normal-Button/Tertiary/Icons/Icon-Menu.png" alt=""></div>
-      </nav>
+    <div id="header">
+      <header id="toolbar">
+        <div id="mylogo">
+          <a href="#header"><img src="img/MyLogo.png" alt="Logo"></a>
+        </div>
+        <nav id="nav">
+          <div id="btn-menu"><img src="img/Normal-Button/Tertiary/Icons/Icon-Menu.png" alt=""></div>
+        </nav>
+      </header>
       <section id="headline">
         <div class="headline-txt">
           <h1 class="txt-1 order-0 pd-0 mrg-0">I’m Danys Glad to see you!</h1>
@@ -37,7 +39,7 @@
           </ul>
         </div>
       </section>
-    </header>
+    </div>
     <section class="works">
       <div class="card order-0 pd-0 mrg-0">
         <div class="block-img order-0"><img src="img/mobile-cards-img/Snapshoot-Portfolio-card-1.png" alt="project 1 image"></div>
@@ -133,7 +135,61 @@
           <div class="action order-3">
             <button type="submit" class="mobile-btn mobile-btn-txt">See Project</button>
           </div>
-        </div>     
+        </div>
+      </div>     
+    </section>
+    <section class="about">
+      <div class="top">
+        <h2 class="txt-1 mrg-0 pd-0">About<br>
+          Myself</h2>
+        <p class="txt-2 mrg-0 pd-0">Hello I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p>
+        <h2 class="txt-3 mrg-0 pd-0">LET’S CONNECT</h2>
+        <ul class="scl-icons mrg-0 pd-0">
+          <li><a href="#"><img src="img/github.svg" alt="github"></a></li>
+          <li><a href="#"><img src="img/Linkedinicon.svg" alt="linkedin"></a></li>
+          <li><a href="#"><img src="img/angelist.svg" alt="angelist"></a></li>
+          <li><a href="#"><img src="img/twitter.svg" alt="twitter"></a></li>          
+          <li class=""><a href="#"><img src="img/medium.svg" alt="medium"></a></li>          
+      </ul>
+        <button type="submit" class="mobile-btn mobile-btn-txt ">Get my resume</button>
+      </div>
+      <div class="skill">
+        <ul class="list-stl pd-0 mrg-0">
+          <li>
+            <div class="frame-7">
+              <span class="skill-txt">Languages</span>
+              <img src="img/Normal-Button/Tertiary/Drop-arrow.png" alt="drop arrow">
+            </div>            
+            <ul class=" lng-list list-stl mgr-0">
+              <li class="frame-9">
+                <img src="img/js-Ellipse.png" alt="javascript image">
+                <span class="lng-txt pd-0 mrg-0"> JavaSript</span>
+              </li>
+              <li class="frame-9">
+                <img src="img/html-Ellipse.png" alt="htm image">
+                <span class="lng-txt pd-0 mrg-0">HTML</span></li>
+              <li class="frame-9">
+                <img src="img/css-Ellipse.png" alt="css image">
+                <span class="lng-txt pd-0 mrg-0">CSS</span>
+              </li>
+            </ul>
+          </li>
+          <li>
+            <div class="frame-7">
+            <span class="skill-txt">Frameworks</span>
+            <img src="img/Normal-Button/Tertiary/right-arrow.png" alt="right arrow">
+          </div>
+          </li>
+          <li class="separator"></li>
+          <li>
+            <div class="frame-7">
+            <span class="skill-txt">Skills</span>
+            <img src="img/Normal-Button/Tertiary/right-arrow.png" alt="right arrow">
+          </div>
+          </li>
+          <li class="separator"></li>
+        </ul>
+      </div>
     </section>
   </body>
 </html>
