--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Portfolio</title>
   </head>
   <body>
-    <div id="header">
+      <div id="header">
       <header id="toolbar">
         <div id="mylogo">
           <a href="#header"><img src="img/MyLogo.png" alt="Logo"></a>
@@ -139,7 +139,7 @@
       </div>     
     </section>
     <section class="about">
-      <div class="top">
+      <div class="top pd-0">
         <h2 class="txt-1 mrg-0 pd-0">About<br>
           Myself</h2>
         <p class="txt-2 mrg-0 pd-0">Hello I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p>
@@ -154,7 +154,7 @@
         <button type="submit" class="mobile-btn mobile-btn-txt ">Get my resume</button>
       </div>
       <div class="skill">
-        <ul class="list-stl pd-0 mrg-0">
+        <ul class="list-stl pd-0 skill-lst-mrg">
           <li>
             <div class="frame-7">
               <span class="skill-txt">Languages</span>
@@ -190,6 +190,6 @@
           <li class="separator"></li>
         </ul>
       </div>
-    </section>
+    </section>  
   </body>
 </html>
