--- a/index.html
+++ b/index.html
@@ -191,5 +191,24 @@
         </ul>
       </div>
     </section>  
+    <section class="contact-me">
+      <div class="contact-me-bg">
+        <div class="contact-me-container">
+           <h2 class="contact-me-title">Contact me</h2>
+           <p class="contact-me-paragraph">If you have an application you are interested in developing, a feature that you need built or a project that needs coding. I’d love to help with it </p>
+           <form action="https://formspree.io/f/xnqwkwnk" method="post" class="contact-me-form">
+            <input type="text" name="Name" id="Name-input" class="input" maxlength="30" placeholder="Name" required>
+            <input  type="email" name="email" id="email-input" class="input" placeholder="email">
+            <textarea name="message" id="text-area" maxlength="500" cols="30" rows="6" class="input"></textarea>
+            <div class="contact-me-button">
+            <button type="submit" >Get It Touch</button>
+            </div>
+           </form>          
+        </div>
+        <div class="home-shape"><img src="img/Home-Indicator/Shape.png" alt=""></div>
+        
+          
+      </div>
+    </section>
   </body>
 </html>
