--- a/index.html
+++ b/index.html
@@ -190,6 +190,9 @@
           <li class="separator"></li>
         </ul>
       </div>
-    </section>  
+    </section> 
+    <section class="contact-me">
+      
+    </section> 
   </body>
 </html>
