--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
         <div class="contact-me-container">
           <h2 class="contact-me-title">Contact me</h2>
           <p class="contact-me-paragraph">If you have an application you are interested in developing, a feature that you need built or a project that needs coding. I’d love to help with it</p>
-          <form action="" class="contact-form">
+          <form action="https://formspree.io/f/xnqwkwnk" method="post" class="contact-form">
             <input type="text" name="name" id="name-input" maxlength="30" required>
             <input type="email" name="email" id="email-input" required>
             <textarea name="message" id="text-message" cols="30" rows="6" maxlength="500" required></textarea>
