--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
         </div>
         <nav id="nav">
           <div id="btn-menu"><img src="img/Normal-Button/Tertiary/Icons/Icon-Menu.png" alt=""></div>
+          <ul id="menu-lst">
+            <li>Portfolio</li>
+            <li>About</li>
+            <li>Contact</li>
+          </ul>
         </nav>
       </header>
       <section id="headline">
