--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <nav id="nav">
           <div id="btn-menu"><img src="img/Normal-Button/Tertiary/Icons/Icon-Menu.png" alt=""></div>
           <ul id="menu-lst">
-            <li>Portfolio</li>
-            <li>About</li>
-            <li>Contact</li>
+            <li class="menu-lst-txt"><a href="#headline">Portfolio</a></li>
+            <li class="menu-lst-txt"><a href="#About-my-self">About</a></li>
+            <li class="menu-lst-txt"><a href="#Contact-Section">Contact</a></li>
           </ul>
         </nav>
       </header>
@@ -143,7 +143,7 @@
         </div>
       </div>     
     </section>
-    <section class="about">
+    <section class="about" id="About-my-self">
       <div class="top pd-0">
         <h2 class="txt-1 mrg-0 pd-0">About<br>
           Myself</h2>
@@ -196,7 +196,7 @@
         </ul>
       </div>
     </section>
-    <section class="contact-me">
+    <section class="contact-me" id="Contact-Section">
       <div class="contact-me-bg">
         <div class="contact-me-container">
           <h2 class="contact-me-title">Contact me</h2>
