--- a/index.html
+++ b/index.html
@@ -47,7 +47,10 @@
     </div>
     <section class="works">
       <div class="card order-0 pd-0 mrg-0">
-        <div class="block-img order-0"><img src="img/mobile-cards-img/Snapshoot-Portfolio-card-1.png" alt="project 1 image"></div>
+        <div class="block-img order-0">
+          <img src="img/mobile-cards-img/Snapshoot-Portfolio-card-1.png" class="mbl-crd-img"alt="project 1 image">
+          <img src="img/desktop-version/Portoflio-Card/Snapshoot-Portfolio-desktop-01.png" class="dsktp-crd-img" alt="Project 1 image">
+        </div>
         <div class="block-txt order-1 pd-0 mrg-0">
           <div class="primary-txt order-0">
             <h2 class="pd-0 mrg-0 txt-4">Tonic</h2>
