--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
         </ul>
       </div>
     </section>
-    <section class="contact-me" id="Contact-Section">
+    <section class="contact-me overflow" id="Contact-Section">
       <div class="contact-me-bg">
         <div class="contact-me-container">
           <h2 class="contact-me-title">Contact me</h2>
