--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
       </header>
       <section id="headline">
         <div class="headline-txt">
-          <h1 class="txt-1 order-0 pd-0 mrg-0 mbl-to-hide">I’m Danys Glad to see you!</h1>
-          <h1 class="txt-1-dsktp order-0 pd-0 mrg-0 dsktp-to-hide dsktp-to-show">I’m Danys <br>
+          <h1 class="txt-1 order-0 pd-0 mrg-0 mbl-to-hide h1-animation">I’m Danys Glad to see you!</h1>
+          <h1 class="txt-1-dsktp order-0 pd-0 mrg-0 dsktp-to-hide dsktp-to-show h1-animation">I’m Danys <br>
             Glad to see you!</h1>
           <p class="txt-2-dsktp order-1 pd-0 mrg-0 txt-j">I’m a software developer! I can help you build
              a product , feature or website Look through
@@ -74,18 +74,12 @@
             <button type="submit" class="mobile-btn mobile-btn-txt">See Project</button>
           </div>
         </div>
-      </div> 
-
-
-
-      <div class="card order-1 pd-0 mrg-0">
-        
+      </div>
+      <div class="card order-1 pd-0 mrg-0">        
         <div class="block-img order-0 dsktp-order-1">
           <img src="img/mobile-cards-img/Snapshoot-Portfolio-card-2.png" class="mbl-to-hide" alt="project 2 image">
           <img src="img/desktop-version/Portoflio-Card/Snapshoot-Portfolio-desktop-02.png" class="dsktp-crd-img dsktp-to-hide" alt="Project 2 image">
         </div>
-
-
         <div class="block-txt order-1 pd-0 mrg-0 dsktp-order-0">          
           <div class="primary-txt order-0">
           <h2 class="pd-0 mrg-0 txt-4 tx mbl-to-hide">Multi-Post<br>Stories</h2>
