--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <nav id="nav">
           <div id="btn-menu"><img src="img/Normal-Button/Tertiary/Icons/Icon-Menu.png" alt=""></div>
           <ul id="menu-lst">
-            <li><a href="#headline" class="menu-lst-txt">Portfolio</a></li>
+            <li><a href="#portfolio" class="menu-lst-txt">Portfolio</a></li>
             <li><a class="menu-lst-txt" href="#About-my-self">About</a></li>
             <li><a class="menu-lst-txt" href="#Contact-Section">Contact</a></li>
           </ul>
@@ -47,7 +47,7 @@
         </div>
       </section>
     </div>
-    <section class="works">
+    <section class="works" id="portfolio">
       <div class="card order-0 pd-0 mrg-0">
         <div class="block-img order-0">
           <img src="img/mobile-cards-img/Snapshoot-Portfolio-card-1.png" class="mbl-to-hide mbl-crd-img" alt="project 1 image">
