--- a/index.html
+++ b/index.html
@@ -247,8 +247,11 @@
         <p class="contact-me-paragraph dsktp-pd">If you have an application you are interested in developing, a feature
           that you need built or a project that needs coding. I’d love to help with it</p>
         <form action="https://formspree.io/f/xnqwkwnk" method="post" class="contact-me-form">
+          <label for="name" id="name-input"></label>
           <input type="text" name="name" id="name-input" maxlength="30" class="input" placeholder="Full name" required>
+          <label for="email" id="email-input"></label>
           <input type="email" name="email" id="email-input" class="input" placeholder="Email address" required>
+          <label for="message" id="text-message"></label>
           <textarea name="message" id="text-message" cols="30" rows="6" class="input" maxlength="500" required
             placeholder="Write your message here"></textarea>
           <div class="dsktp-align">
@@ -259,5 +262,4 @@
     </div>
   </section>
 </body>
-
 </html>
