create cards using js
-Creaet the projectInfo array with cards information.
-Creat the foreach loop to generate cards for every object in the projectInfo array.
-Delete the cards of cards section.
-create de modal section.

--- a/index.html
+++ b/index.html
@@ -50,139 +50,7 @@
     </section>
   </div>
   <section class="works" id="portfolio">
-    <div class="card order-0 pd-0 mrg-0">
-      <div class="block-img order-0">
-        <img src="img/mobile-cards-img/Snapshoot-Portfolio-card-1.png" class="mbl-to-hide mbl-crd-img"
-          alt="project 1 image">
-        <img src="img/desktop-version/Portoflio-Card/Snapshoot-Portfolio-desktop-01.png"
-          class="dsktp-to-hide dsktp-crd-img" alt="project 1 desktop image">
-      </div>
-      <div class="block-txt order-1 pd-0 mrg-0">
-        <div class="primary-txt order-0">
-          <h2 class="pd-0 mrg-0 txt-4 txt-4-dsktp">Tonic</h2>
-          <ul class="list-stl pd-0 flx-rw mrg-0">
-            <li class="txt-5 txt-5-dsktp">CANOPY</li>
-            <li><img src="img/Counter.png" alt="Separator image"></li>
-            <li class="txt-6 txt-6-dsktp">Back End Dev</li>
-            <li><img src="img/Counter.png" alt="Separator image"></li>
-            <li class="txt-6 txt-6-dsktp">2015</li>
-          </ul>
-        </div>
-        <p class="mrg-0 txt-7 txt-7-dsktp order-1">A daily selection of privately personalized reads; no accounts or
-          sign-ups required.</p>
-        <ul class="tags order-2 list-stl flx-rw mrg-0 pd-0">
-          <li class="txt-tags">html</li>
-          <li class="txt-tags">css</li>
-          <li class="txt-tags">javaScript</li>
-        </ul>
-        <div class="action order-3">
-          <button type="submit" class="mobile-btn mobile-btn-txt">See Project</button>
-        </div>
-      </div>
-    </div>
-    <div class="card order-1 pd-0 mrg-0">
-      <div class="block-img order-0 dsktp-order-1">
-        <img src="img/mobile-cards-img/Snapshoot-Portfolio-card-2.png" class="mbl-to-hide" alt="project 2 image">
-        <img src="img/desktop-version/Portoflio-Card/Snapshoot-Portfolio-desktop-02.png"
-          class="dsktp-crd-img dsktp-to-hide" alt="Project 2 image">
-      </div>
-      <div class="block-txt order-1 pd-0 mrg-0 dsktp-order-0">
-        <div class="primary-txt order-0">
-          <h2 class="pd-0 mrg-0 txt-4 tx mbl-to-hide">Multi-Post<br>Stories</h2>
-          <h2 class="pd-0 mrg-0 txt-4-dsktp dsktp-to-hide dsktp-to-show">Multi-Post Stories</h2>
-          <ul class="list-stl pd-0 flx-rw mrg-0">
-            <li class="txt-5 mbl-to-hide">CANOPY</li>
-            <li class="txt-5-dsktp dsktp-to-hide dsktp-to-show">FACEBOOK</li>
-            <li><img src="img/Counter.png" alt="Separator image"></li>
-            <li class="txt-6 mbl-to-hide">Back End Dev</li>
-            <li class="txt-6-dsktp dsktp-to-hide dsktp-to-show">Full Stack Dev</li>
-            <li><img src="img/Counter.png" alt="Separator image"></li>
-            <li class="txt-6 txt-6-dsktp">2015</li>
-          </ul>
-        </div>
-        <p class="mrg-0 txt-7 order-1 mbl-to-hide">A daily selection of privately personalized reads; no accounts or
-          sign-ups required.</p>
-        <p class="mrg-0 txt-7-dsktp order-1 dsktp-to-hide dsktp-to-show">Experimental content creation feature that
-          allows users to add to an existing story over the course of a day without spamming their friends.</p>
-        <ul class="tags order-2 list-stl flx-rw mrg-0 pd-0">
-          <li class="txt-tags">html</li>
-          <li class="txt-tags">css</li>
-          <li class="txt-tags">javaScript</li>
-        </ul>
-        <div class="action order-3">
-          <button type="submit" class="mobile-btn mobile-btn-txt">See Project</button>
-        </div>
-      </div>
-    </div>
-    <div class="card order-2">
-      <div class="block-img order-0">
-        <img src="img/mobile-cards-img/Snapshoot-Portfolio-card-3.png" class="mbl-to-hide" alt="project 3 image">
-        <img src="img/desktop-version/Portoflio-Card/Snapshoot-Portfolio-desktop-03.png"
-          class="dsktp-crd-img dsktp-to-hide" alt="Project 3 image">
-      </div>
-      <div class="block-txt order-1 pd-0 mrg-0">
-        <div class="primary-txt order-0">
-          <h2 class="pd-0 mrg-0 txt-4 mbl-to-hide">Tonic</h2>
-          <h2 class="pd-0 mrg-0 txt-4-dsktp dsktp-to-hide dsktp-to-show">Facebook 360</h2>
-          <ul class="list-stl pd-0 flx-rw mrg-0">
-            <li class="txt-5 mbl-to-hide">CANOPY</li>
-            <li class="txt-5-dsktp dsktp-to-hide dsktp-to-show">FACEBOOK</li>
-            <li><img src="img/Counter.png" alt="Separator image"></li>
-            <li class="txt-6 mbl-to-hide">Back End Dev</li>
-            <li class="txt-6-dsktp dsktp-to-hide dsktp-to-show">Full Stack Dev</li>
-            <li><img src="img/Counter.png" alt="Separator image"></li>
-            <li class="txt-6 txt-6-dsktp">2015</li>
-          </ul>
-        </div>
-        <p class="mrg-0 txt-7 order-1 mbl-to-hide">A daily selection of privately personalized reads; no accounts or
-          sign-ups required.</p>
-        <p class="mrg-0 txt-7-dsktp order-1">Exploring the future of media in Facebook's first Virtual Reality app; a
-          place to discover and enjoy 360 photos and videos on Gear VR.</p>
-        <ul class="tags order-2 list-stl flx-rw mrg-0 pd-0">
-          <li class="txt-tags">html</li>
-          <li class="txt-tags">css</li>
-          <li class="txt-tags">javaScript</li>
-        </ul>
-        <div class="action order-3">
-          <button type="submit" class="mobile-btn mobile-btn-txt">See Project</button>
-        </div>
-      </div>
-    </div>
-    <div class="card order-3 pd-0 mrg-0">
-      <div class="block-img order-0 dsktp-order-1">
-        <img src="img/mobile-cards-img/Snapshoot-Portfolio-card-4.png" class="mbl-to-hide" alt="project 4 image">
-        <img src="img/desktop-version/Portoflio-Card/Snapshoot-Portfolio-desktop-04.png"
-          class="dsktp-crd-img dsktp-to-hide" alt="project 4 image">
-      </div>
-      <div class="block-txt order-1 pd-0 mrg-0 dsktp-order-0">
-        <div class="primary-txt order-0">
-          <h2 class="pd-0 mrg-0 txt-4 mbl-to-hide">Multi-Post<br>Stories</h2>
-          <h2 class="pd-0 mrg-0 txt-4-dsktp dsktp-to-hide dsktp-to-show">Uber Navigation</h2>
-          <ul class="list-stl pd-0 flx-rw mrg-0">
-            <li class="txt-5 mbl-to-hide">CANOPY</li>
-            <li class="txt-5-dsktp">Uber</li>
-            <li><img src="img/Counter.png" alt="Separator image"></li>
-            <li class="txt-6 mbl-to-hide">Back End Dev</li>
-            <li class="txt-6-dsktp dsktp-to-hide dsktp-to-show">Lead Developer</li>
-            <li><img src="img/Counter.png" alt="Separator image"></li>
-            <li class="txt-6 mbl-to-hide">2015</li>
-            <li class="txt-6-dsktp dsktp-to-hide dsktp-to-show">2018</li>
-          </ul>
-        </div>
-        <p class="mrg-0 txt-7 order-1 mbl-to-hide">A daily selection of privately personalized reads; no accounts or
-          sign-ups required.</p>
-        <p class="mrg-0 txt-7-dsktp order-1 dsktp-to-hide dsktp-to-show">A smart assistant to make driving more safe,
-          efficient, and fun by unlocking your most expensive computer: your car.</p>
-        <ul class="tags order-2 list-stl flx-rw mrg-0 pd-0">
-          <li class="txt-tags">html</li>
-          <li class="txt-tags">css</li>
-          <li class="txt-tags">javaScript</li>
-        </ul>
-        <div class="action order-3">
-          <button type="submit" class="mobile-btn mobile-btn-txt">See Project</button>
-        </div>
-      </div>
-    </div>
+   
   </section>
   <section class="about" id="About-my-self">
     <div class="top pd-0">
@@ -270,6 +138,9 @@
       <li><a class="close-menu" href="#About-my-self">About</a></li>
       <li><a  class="close-menu" href="#Contact-Section">Contact</a></li>
     </ul>
+  </div>
+  <div id="modals">
+    
   </div>
   <script src="main.js"></script>
 </body>
