--- a/index.html
+++ b/index.html
@@ -49,9 +49,14 @@
       </div>
     </section>
   </div>
-  <section class="works" id="portfolio">
-   
-  </section>
+  <div class="works" id="portfolio">
+
+  </div>
+  <div id="popUp">
+    
+  </div>
+
+
   <section class="about" id="About-my-self">
     <div class="top pd-0">
       <h2 class="txt-1 mrg-0 pd-0 about-tlt">About<br>
@@ -131,17 +136,15 @@
   </section>
   <div id="overlay">
     <div id="close-mobile-menu">
-      <img class="close-menu" src="img/Normal-Button/Tertiary/Enabled.png"  alt="Close button">
+      <img class="close-menu" src="img/Normal-Button/Tertiary/Enabled.png" alt="Close button">
     </div>
     <ul id="mobile-menu-list">
       <li><a class="close-menu" href="#portfolio">Portfolio</a></li>
       <li><a class="close-menu" href="#About-my-self">About</a></li>
-      <li><a  class="close-menu" href="#Contact-Section">Contact</a></li>
+      <li><a class="close-menu" href="#Contact-Section">Contact</a></li>
     </ul>
-  </div>
-  <div id="modals">
-    
   </div>
   <script src="main.js"></script>
 </body>
+
 </html>
