New logo add links

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div id="header">
     <header id="toolbar">
       <div id="mylogo">
-        <a href="#header"><img src="img/MyLogo.png" alt="Logo"></a>
+        <a href="#header"><img src="img/logo_danys_clean.png" alt="Logo" class="image_header"></a>
       </div>
       <nav id="nav">
         <div id="btn-menu"><img src="img/Normal-Button/Tertiary/Icons/Icon-Menu.png" alt=""></div>
@@ -40,11 +40,11 @@
         </p>
         <div class="txt-3 order-2">LET’S CONNECT</div>
         <ul class="scl-icons order-3 mrg-0 pd-0">
-          <li><a href="#"><img src="img/twitter.svg" alt="twitter"></a></li>
-          <li><a href="#"><img src="img/Linkedinicon.svg" alt="linkedin"></a></li>
-          <li><a href="#"><img src="img/medium.svg" alt="medium"></a></li>
-          <li><a href="#"><img src="img/github.svg" alt="github"></a></li>
-          <li><a href="#"><img src="img/angelist.svg" alt="angelist"></a></li>
+          <li><a href="https://twitter.com/Danys_Linares" target="_blank" rel="noreferrer noopener"><img src="img/twitter.svg" alt="twitter"></a></li>
+          <li><a href="https://www.linkedin.com/in/danys-linares/" target="_blank" rel="noreferrer noopener"><img src="img/Linkedinicon.svg" alt="linkedin"></a></li>
+          <li><a href="https://medium.com/@danlinmoy" target="_blank" rel="noreferrer noopener" ><img src="img/medium.svg" alt="medium"></a></li>
+          <li><a href="https://github.com/d4nQw3rty" target="_blank" rel="noreferrer noopener"><img src="img/github.svg" alt="github"></a></li>
+          <li><a href="https://wellfound.com/u/danys-linares" target="_blank" rel="noreferrer noopener"><img src="img/angelist.svg" alt="angelist" rel="noreferrer noopener"></a></li>
         </ul>
       </div>
     </section>
